--- a/sdk/package.json
+++ b/sdk/package.json
@@ -2,10 +2,7 @@
   "name": "manta-sdk",
   "version": "1.0.0",
   "description": "manta sdk",
-  "main": "index.ts",
-  "scripts": {
-    "serve" : "webpack serve"
-  },
+  "main": "sdk.ts",
   "dependencies": {
     "manta-wasm-wallet": "1.3.1",
     "manta-wasm-wallet-api": "1.3.1",
@@ -22,12 +19,6 @@
     "axios": "^0.27.2",
     "bn.js": "^5.2.0",
     "tsx": "^3.12.1"
-  },
-  "devDependencies": {
-    "html-webpack-plugin": "^5.3.2",
-    "webpack": "^5.49.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
   },
   "browser": {
     "crypto": false
