--- a/examples/asset-webpack/package.json
+++ b/examples/asset-webpack/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "serve" : "webpack serve"
   },
-  "dependencies": {},
+  "dependencies": {
+  },
   "devDependencies": {
     "html-webpack-plugin": "^5.3.2",
     "webpack": "^5.49.0",
