--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "manta-sdk",
+  "name": "manta.js",
   "version": "1.0.0",
-  "description": "manta sdk",
+  "description": "manta.js sdk",
   "main": "sdk.ts",
   "dependencies": {
     "manta-wasm-wallet": "1.3.1",
