--- a/sdk/package/package.json
+++ b/sdk/package/package.json
@@ -1,8 +1,9 @@
 {
   "name": "manta.js",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "manta.js sdk",
   "main": "sdk.ts",
+  "author": "Manta Network",
   "dependencies": {
     "manta-wasm-wallet": "1.3.1",
     "manta-wasm-wallet-api": "1.3.1",
